Refactor evidence search using robust dynamic JSON SearchFilters schema mapping