@@ -4,13 +4,16 @@ import com.umss.sigesa.adapter.in.web.dto.EvidenceSearchDetailDto;
 import com.umss.sigesa.adapter.in.web.dto.SearchQueryResponseDto;
 import com.umss.sigesa.adapter.out.persistance.EvaluationDimensionJpaRepository;
 import com.umss.sigesa.adapter.out.persistance.entity.EvaluationDimensionEntity;
+import com.umss.sigesa.application.model.evidence.SearchFilters;
 import com.umss.sigesa.application.port.out.AssistantQueryPort;
 import com.umss.sigesa.application.port.out.SearchEvidenceQueryPort;
 import com.umss.sigesa.config.AssistantProperties;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.mockito.ArgumentCaptor;
 import org.mockito.Mockito;
 
+import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.Collections;
 import java.util.List;
@@ -48,7 +51,7 @@ class SearchEvidenceServiceTest {
         EvaluationDimensionEntity dim = new EvaluationDimensionEntity();
         dim.setName("Infraestructura");
         when(dimensionRepository.findAll()).thenReturn(List.of(dim));
-        when(queryPort.executeSearch(null, "Infraestructura", null, scope)).thenReturn(List.of(detail));
+        when(queryPort.executeSearch(any(SearchFilters.class), eq(scope))).thenReturn(List.of(detail));
 
         SearchQueryResponseDto response = searchEvidenceService.search("infraestructura", true, UUID.randomUUID(), "CC", scope);
 
@@ -66,13 +69,17 @@ class SearchEvidenceServiceTest {
                 "routingPath", "LLM",
                 "termino", "computacion",
                 "dimension", "Infraestructura",
-                "anio", "2024"
+                "fechaInicio", "2024-01-01",
+                "fechaFin", "2024-12-31"
         ));
 
         EvidenceSearchDetailDto detail = new EvidenceSearchDetailDto(
                 UUID.randomUUID(), "file.pdf", "aulas de computacion", "Infraestructura", "CRT-04", "Sistemas", LocalDateTime.now()
         );
-        when(queryPort.executeSearch("computacion", "Infraestructura", 2024, scope)).thenReturn(List.of(detail));
+        when(queryPort.executeSearch(argThat(f -> f != null && "aulas de computacion".equals(f.getTermino())), eq(scope)))
+                .thenReturn(Collections.emptyList());
+        when(queryPort.executeSearch(argThat(f -> f != null && "computacion".equals(f.getTermino())), eq(scope)))
+                .thenReturn(List.of(detail));
 
         SearchQueryResponseDto response = searchEvidenceService.search("aulas de computacion 2024", true, UUID.randomUUID(), "CC", scope);
 
@@ -99,7 +106,7 @@ class SearchEvidenceServiceTest {
     @Test
     void testSearchIADesactivada_Escenario4() {
         when(assistantProperties.isEnabled()).thenReturn(false);
-        when(queryPort.executeSearch("aulas", null, null, Collections.emptyList())).thenReturn(Collections.emptyList());
+        when(queryPort.executeSearch(any(SearchFilters.class), eq(Collections.emptyList()))).thenReturn(Collections.emptyList());
 
         SearchQueryResponseDto response = searchEvidenceService.search("aulas", true, UUID.randomUUID(), "TD", Collections.emptyList());
 
@@ -113,10 +120,13 @@ class SearchEvidenceServiceTest {
 
         // Caso 1: Técnico DUEA (TD) - no aplica filtro de scope (pasa null)
         searchEvidenceService.search("aulas", false, UUID.randomUUID(), "TD", ccScope);
-        verify(queryPort).executeSearch("aulas", null, null, null);
+        
+        ArgumentCaptor<SearchFilters> filtersCaptor = ArgumentCaptor.forClass(SearchFilters.class);
+        verify(queryPort, atLeastOnce()).executeSearch(filtersCaptor.capture(), eq(null));
+        assertEquals("aulas", filtersCaptor.getValue().getTermino());
 
         // Caso 2: Coordinador de Carrera (CC) - aplica filtro de scope (pasa ccScope)
         searchEvidenceService.search("aulas", false, UUID.randomUUID(), "CC", ccScope);
-        verify(queryPort).executeSearch("aulas", null, null, ccScope);
+        verify(queryPort, atLeastOnce()).executeSearch(any(SearchFilters.class), eq(ccScope));
     }
 }
